--- a/viewer/templates/form.html
+++ b/viewer/templates/form.html
@@ -7,6 +7,6 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-    <input type="submit" value="Zaloguj" class="btn btn-primary">
+    <input type="submit" value="Done" class="btn btn-primary">
     </form>
 {% endblock %}
