--- a/viewer/templates/list_of_books.html
+++ b/viewer/templates/list_of_books.html
@@ -23,9 +23,9 @@ Lista Książek
       <p class="card-text">Jakiś opis książki.</p>
         <a href="#" class="btn btn-primary">Szczegóły</a>
           <a href="#" class="btn btn-primary">wypożycz</a>
-            {% if user.is_superuser %}
-                <a href="{% url 'update' book.id %}" class="btn btn-primary">Edycja</a>
-            {% endif %}
+{#         {% if user.is_superuser %}#}
+{#                <a href="{% url 'update' book.id %}" class="btn btn-primary">Edycja</a>#}
+{#            {% endif %}#}
     </div>
   </div>
 </div>
